--- a/src/styles/quick-capture.css
+++ b/src/styles/quick-capture.css
@@ -85,6 +85,10 @@
 	box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
 }
 
+.quick-capture-tabs.is-hidden {
+	display: none;
+}
+
 /* Quick Capture Tab Button Icon and Text - shadcn style */
 .quick-capture-tab-icon {
 	margin-right: 6px;
